Submitting latest translations for bs locale
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104617 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bs/newsletter.lang
+++ b/bs/newsletter.lang
@@ -62,7 +62,7 @@ Pročitajte sve o tome u našem <span>newsletteru</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Vaša prijava na newsletter je potvrđena.
 
 
 ;Format
@@ -70,110 +70,110 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Spremni ste! <span>No sačekajte, ima još</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Želite dobijati najrelevantnije informacija? Recite nam malo više o sebi. A kad ste već ovdje, prijavite se i na druge Mozilla novosti.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & vi
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Ostali naši newsletteri:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Dobijajte najnovije savjete i trikove kako da izvučete maksimum iz vašeg omiljenog browsera.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Mobilni Firefox
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Naučite o najboljim novim add-onima i mogućnostima za mobilni Firefox.
 
 
 ;Beta News
-Beta News
+Novosti o beti
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Čitajte o najnovijim mogućnostima Firefoxa za desktop i mobitel prije finalne verzije.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Budimo prijatelji!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox je takođe na vašim omiljenim društvenim mrežama. Povežite se nama i pridružite se konverzaciji.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Upravljajte svojim <span>prijavama na newsletter</span>
 
 
 ;Subscribe
-Subscribe
+Prijava
 
 
 ;Unsubscribe
-Unsubscribe
+Odjava
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Uključite ovdje ako želite da budete uklonjeni sa svih Mozilla emailova
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Ukloni me sa svih Mozilla emailova
 
 
 ;Save Preferences
-Save Preferences
+Spasi postavke
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Hvala na ažuriranju vaših email postavki.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Odjavljeni ste.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Žao nam je vidjeti vas kako odlazite? Da li biste nam rekli zašto nas napuštate?
 
 
 ;You send too many emails.
-You send too many emails.
+Šaljete previše emailova.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Vaš sadržaj mi nije bio relevantan.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Dizajn vašem emaila mi je bio teško čitljiv.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Ja se nisam prijavio na ovo.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Radije pratim vijesti iz Mozille na Facebooku i Twitteru.
 
 
 ;Submit
-Submit
+Pošalji
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Hvala što ste nam rekli zašto odlazite.
 
 
