--- a/bs/snippets.lang
+++ b/bs/snippets.lang
@@ -118,11 +118,11 @@ Pozovite prijatelje da vide nadolazeće mogućnosti Firefoxa. <a href="%">Postan
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Koristite Firefox na više računara? Sada možete sinhronizovati vaše add-one na svim računarima koje koristite. <a href="%">Saznajte kako aktivirati Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Brz, brz, brz. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a>. Pomozite nam da proširimo vijest.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
