--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -122,6 +122,6 @@ Bruger du Firefox på flere computere? Nu kan du synkronisere dine tilføjelser 
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Lynhurtig! <a %s>Firefox til Android har netop fået en stor opgradering</a>. Fortæl det til dine venner.
 
 
