--- a/et/newsletter.lang
+++ b/et/newsletter.lang
@@ -62,7 +62,7 @@ Loe rohkem meie <span>uudiskirjast</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Uudiskirja tellimus on kinnitatud.
 
 
 ;Format
@@ -70,110 +70,110 @@ Vorming
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Seadistamine on lõppenud! <span>Kuid oota, see polnud kõik.</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Soovid saada kõige asjakohasemat infot? Räägi meile endast veidi rohkem ning telli veel teisigi Mozilla uudiseid.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & sina
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Meie teised uudiskirjad:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Saa teada uutest nippidest ja trikkidest, mis aitavad sul oma lemmikbrauserist parima võtta.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefoxi mobiiliversioon
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Õpi tundma Firefoxi mobiiliversiooni ägedamaid uusi lisasid ja võimalusi.
 
 
 ;Beta News
-Beta News
+Beeta uudised
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Loe Firefoxi töölaua- ja mobiiliversiooni uute võimaluste kohta enne nende lõplikku väljalaset.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Oleme sõbrad!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox on esindatud ka sinu lemmiksuhtlusvõrgustikes. Ole meiega ühenduses ning võta vestlustest osa.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Halda <span>uudiskirjade tellimusi</span>
 
 
 ;Subscribe
-Subscribe
+Telli
 
 
 ;Unsubscribe
-Unsubscribe
+Lõpeta tellimine
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Klõpsa siia, kui soovid loobuda kõigist Mozilla kirjadest.
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Eemaldage mind kõigi Mozilla kirjade saajate hulgast
 
 
 ;Save Preferences
-Save Preferences
+Salvesta eelistused
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Täname eelistuste uuendamise eest.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Sinu tellimus on lõpetatud.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Meil on kahju, et loobusid uudiskirjast. Kas ütleksid meile, miks sa nii otsustasid?
 
 
 ;You send too many emails.
-You send too many emails.
+Te saadate liiga palju kirju.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Teie saadetud sisu polnud minu jaoks asjakohane.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Kirjade kujundus oli raskesti loetav.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Ma pole neid tellinud.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Jälgin Mozilla tegemisi hoopis Facebookis ja Twitteris.
 
 
 ;Submit
-Submit
+Valmis
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Täname, et avaldasid lahkumise põhjuse.
 
 
