--- a/es-MX/snippets.lang
+++ b/es-MX/snippets.lang
@@ -26,15 +26,15 @@ Antes de Firefox está la Beta, y antes de la Beta está Aurora. <a href="%s">Pr
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-
+¡<a href="%s">Conviértete en simpatizante de Firefox</a> y consigue todo lo necesario para compartir Firefox con el mundo!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox es orgullosamente sin fines de lucro y libre de inovar en tu nombre sin compromiso. <a href="%s">Conoce más</a> acerca de nuestra misión.
+Firefox es orgullosamente sin fines de lucro y libre de innovar en tu nombre sin compromiso. <a href="%s">Conoce más</a> acerca de nuestra misión.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Rápido, flexible y seguro, Firefox es el único navegador que te pone primero. <a href="%s">Leer más</a> acerca de que nos hace diferente por diseño.
+Rápido, flexible y seguro, Firefox es el único navegador para el que tú eres lo primero. De todos, para todos. <a href="%s">Descubre</a> lo que nos hace diferentes.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
@@ -50,7 +50,7 @@ Conserva el estilo de tu Firefox. Cambia su apariencia con los nuevos <a href="%
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-¿Demasadas pestañas? Quita el desorden de tu navegador con <a href="%s">Panorama</a>.
+¿Demasiadas pestañas? Quita el desorden de tu navegador con <a href="%s">Panorama</a>.
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
@@ -66,7 +66,7 @@ Obten un vista previa de las últimas características, incluso antes de que est
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-
+Descarga Firefox Aurora para probar características y ayudarnos a determinar como será la Beta.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
@@ -82,46 +82,45 @@ Descarga Firefox en tu tableta con Android y pon el poder de la web justo en tus
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Descarga Firefox Beta</a>, da tus opiniones y sugerencias, y haz que el próximo Firefox sea incluso más alucinante para nuestros 450 millones de usuarios.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Prueba características, defínelas y perfecciónalas, y ayuda a que nuestra próxima versión sea incluso mejor. <a href="%">¡Descarga Firefox Beta!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+¿Te encanta Firefox? ¿Quieres hacer que nuestra nueva versión sea incluso mejor? ¡<a href="%">Descarga Firefox Beta</a> y danos tus opiniones y sugerencias!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+¿Tienes instalado el último Firefox Beta? <a href="%">Obtenlo ahora</a> y ayúdanos a probar las últimas características.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+¿No tienes la última versión de Firefox Beta? <a href="%">Obtenla hoy</a> y mantente al día de las innovaciones en las que trabajamos para la nueva versión.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+¿Quieres compartir tus opiniones y sugerencias? <a href="%">Descubre cómo</a> y haz que la próxima versión sea incluso más alucinante.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Usuarios de Firefox Beta: no olviden <a href="%">dar sus opiniones y sugerencias</a> que nos ayudarán a hacer los últimos ajustes de la próxima versión.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Haz que la próxima versión de Firefox sea incluso más alucinante. <a href="%">Conviértete en simpatizante</a> y comparte Firefox Beta con tus amigos.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Invita a tus amigos a que vean las características que tendrá Firefox en el futuro. <a href="%">Conviértete en simpatizante</a> y comparte Firefox Aurora hoy.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+¿Usas Firefox en muchas computadoras? Ahora puedes sincronizar tus complementos en todas ellas. <a href="%">Aprende como activar Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-
+Rápido, rápido, rápido. <a %s>Firefox para Android acaba de ser actualizado</a>. Ayúdanos a difundirlo.
 
