--- a/es-MX/newsletter.lang
+++ b/es-MX/newsletter.lang
@@ -58,11 +58,11 @@ Acabamos de enviarte un correo electrónico con el mensaje de confirmación. Haz
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+¡Lee toda la información sobre Firefox en <span>nuestro boletín!</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Tu suscripción al boletín ha sido confirmada.
 
 
 ;Format
@@ -70,15 +70,14 @@ Formato
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+¡Ya estás listo! <span>Pero espera, hay más</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-
+¿Quieres recibir la info más relevante? Cuéntanos un poco más de ti. Y ya que estás aquí, suscríbete a otras noticias de Mozilla.
 
 ;Firefox & You
-Firefox & You
+Firefox & tú
 
 
 ;Our Other Newsletters:
@@ -90,7 +89,7 @@ Get the latest tips and tricks for getting the most out of your favorite browser
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
@@ -134,7 +133,7 @@ Remove me from all Mozilla emails
 
 
 ;Save Preferences
-Save Preferences
+Guardar preferencias
 
 
 ;Thanks for updating your email preferences.
@@ -170,7 +169,7 @@ I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 
 
 ;Submit
-Submit
+Enviar
 
 
 ;Thanks for telling us why you’re leaving.
