Updated file entries for Odia
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104652 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/or/newsletter.lang
+++ b/or/newsletter.lang
@@ -2,47 +2,47 @@
 
 
 ;Get Monthly News
-Get Monthly News
+ମାସିକ ଖବର ପ୍ରାପ୍ତ କରନ୍ତୁ
 
 
 ;Your Email Address
-Your Email Address
+ଆପଣଙ୍କର ଇମେଲ ଠିକଣା
 
 
 ;Text
-Text
+ପାଠ୍ୟ
 
 
 ;Available Languages
-Available Languages
+ଉପଲବ୍ଧ ଭାଷାଗୁଡ଼ିକ
 
 
 ;Select country
-Select country
+ଦେଶ ବାଛନ୍ତୁ
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+ଆହା! ଗୋଟିଏ ବୈଧ ଇମେଲ ଠିକଣା ଭରଣ କରିଛନ୍ତି କି ନାହିଁ ନିଶ୍ଚିତ କରନ୍ତୁ।
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+ଦୟାକରି Mozilla ଗୋପନୀୟତା ନିତୀକୁ ପଢ଼ନ୍ତୁ ଏବଂ ସେହି ବାକ୍ସକୁ ଚିହ୍ନଟ କରି ରାଜି ଅଛନ୍ତି ବୋଲି ଜଣାନ୍ତୁ।
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
+ମୁଁ <a href="%s">ଗୋପନୀୟତା ନିତୀ</a> ରେ ରାଜି ଅଛି
 
 
 ;Sign me up!
-Sign me up!
+ମୋତେ ସାମିଲ କରନ୍ତୁ!
 
 
 ;We will only send you Mozilla-related information.
-We will only send you Mozilla-related information.
+ଆମେ ଆପଣଙ୍କୁ କେବଳ Mozilla-ସମ୍ପର୍କୀୟ ସୂଚନା ପଠାଇବୁ।
 
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
+ସଦସ୍ଯତା ଗ୍ରହଣ କରିଥିବାରୁ ଧନ୍ୟବାଦ!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
@@ -66,7 +66,7 @@ Your newsletter subscription has been confirmed.
 
 
 ;Format
-Format
+ସଜ୍ଜିକରଣ ଶୈଳୀ
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
@@ -78,11 +78,11 @@ Want to get the most relevant info? Tell us a little more about yourself. And wh
 
 
 ;Firefox & You
-Firefox & You
+Firefox ଏବଂ ଆପଣ
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+ଆମର ଅନ୍ୟାନ୍ୟ ଖବର:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
@@ -90,7 +90,7 @@ Get the latest tips and tricks for getting the most out of your favorite browser
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox ମୋବାଇଲ
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
@@ -98,7 +98,7 @@ Learn about the hottest new add-ons and features for Firefox mobile.
 
 
 ;Beta News
-Beta News
+ବିଟା ଖବର
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
@@ -114,15 +114,15 @@ Firefox is also on your favorite social networking sites. Connect with us and jo
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+ଆପଣଙ୍କର <span>ଖବର ସଦସ୍ୟତା</span> କୁ ପରିଚାଳନା କରନ୍ତୁ
 
 
 ;Subscribe
-Subscribe
+ସଦସ୍ୟତା ଗ୍ରହଣ କରନ୍ତୁ
 
 
 ;Unsubscribe
-Unsubscribe
+ସଦସ୍ୟତା ବାତିଲ କରନ୍ତୁ
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
@@ -134,7 +134,7 @@ Remove me from all Mozilla emails
 
 
 ;Save Preferences
-Save Preferences
+ପସନ୍ଦଗୁଡ଼ିକୁ ସଂରକ୍ଷଣ କରନ୍ତୁ
 
 
 ;Thanks for updating your email preferences.
@@ -142,7 +142,7 @@ Thanks for updating your email preferences.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+ଆପଣ ସଦସ୍ୟତା ବାତିଲ କରିଛନ୍ତି।
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
@@ -150,7 +150,7 @@ We’re sorry to see you go. Would you mind telling us why you’re leaving?
 
 
 ;You send too many emails.
-You send too many emails.
+ଆପଣ ଅତ୍ୟଧିକ ଇମେଲ ପଠାଇଛନ୍ତି।
 
 
 ;Your content wasn't relevant to me.
@@ -170,7 +170,7 @@ I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 
 
 ;Submit
-Submit
+ଦାଖଲ କରନ୍ତୁ
 
 
 ;Thanks for telling us why you’re leaving.
