--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -114,7 +114,7 @@ Firefox je prisutan i na vašim omiljenim društvenim mrežama. Povežite se s n
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Upravljajte svojim <span>pretplatama na newsletter</span>
 
 
 ;Subscribe
