Translated new strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104658 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hr/upgradedialog.lang
+++ b/hr/upgradedialog.lang
@@ -23,7 +23,7 @@ Bolji nego ikada
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Dostupna je novija inačica Firefoxa koja vas može bolje zaštititi od napada na Internetu.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+dobijte najnovije sigurnosne mogućnosti
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ ostvarite bolje performanse
 
 
 ;enjoy greater customization
-enjoy greater customization
+uživajte u boljim prilagodbama
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Vaša inačica Firefoxa uskoro više neće biti sigurna protiv napada na Internetu.
 
 
 ;Stay safe online
