--- a/hi-IN/firefoxtesting.lang
+++ b/hi-IN/firefoxtesting.lang
@@ -2,58 +2,58 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+फ़ायरफ़ॉक्स बीटा को एंड्राएड के लिए डाउनलोड करे - निःशुल्क
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+फ़ायरफ़ॉक्स बीटा को डेस्कटाप के लिए डाउनलोड करें - निःशुल्क
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+फ़ायरफ़ॉक्स के भविष्य के रिलीज को डाउनलोड करें और जाँचें. अरोरा और बीटा बिल्ड से ताजा नवाचार का अनुभव लें.
 
 
 ;Firefox Beta
-Firefox Beta
+फ़ायरफ़ॉक्स बीटा
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+इसके लिए फ़ायरफ़ॉक्स बीटा:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+मोबाइल के लिए फ़ायरफ़ॉक्स बीटा
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+बीटा डाउनलोड करें और फ़ायरफ़ॉक्स का अगला संस्करण का हिस्सा बनें.
 
 
 ;1. Test Features
-1. Test Features
+1. जाँच फीचर
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+नवीनतम प्रदर्शन, मनपसंद करना, और सुरक्षा संवर्द्धन देखें जो प्राइम टाइम के लिए तैयार है.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. रिफाइन करें और पोलिश करें
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+हमारे मदद के लिए बग फाइल करें जिससे हमलोग स्थिर वातावरण में फंक्शन को बदल सकें.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. अपने हिस्से का कार्य करें
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+फ़ायरफ़ॉक्स के अगले संस्करण में अपना पाएँ और ४५० मिलिनय लोगों के लिए जो इसका रोज उपयोग करते हैं.
 
 
 ;Supported devices
-Supported devices
+समर्थन भेटल युक्ति
 
 
