--- a/fa/snippets.lang
+++ b/fa/snippets.lang
@@ -122,6 +122,6 @@
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+سریع، سریع، سریع. <a %s>فایرفاکس برای اندروید بروزرسانی‌ای تازه دریافت کرده است</a>. به ما کمک کنید تا تمام دنیا را خبر کنید.
 
 
