--- a/ach/download.lang
+++ b/ach/download.lang
@@ -1,9 +1,9 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, layeny web ma pe giculo pire, jo ame oyubo gin aye dano ma ojalo kare  gi i gwoko & pi loko kit neno me anyim pa web pi ber bedo pa lwak.
+Yenyo tye kabino iyo! Bed ma yiti twolo pi ngec manyen ikom ngiyo ping, kabedo me gedo ki gero ne bicake woko. Watye kabyeko me yabo dogola wa i
 
 
 ;Different by Design
-Tye patpat ki Lingo
+Kilingo ne patpat
 
 
 ;Proudly <span>non-profit</span>
@@ -27,7 +27,7 @@ Myero kwany megi cake i ceken manok, ento ka cce pe, <a href="%s">dii kany</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
-Macalo en ma pe nongo magoba, wan watye labongo tic me cako ne i kakari labongo kit dic mo keken me poko.  I  bimaro lapokapoka.
+Macalo en ma pe nongo magoba, wan watye labongo tic me cako ne i kakari labongo kit dic mo keken me poko. Ibimaro lapokapoka.
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
