--- a/ach/main.lang
+++ b/ach/main.lang
@@ -159,7 +159,7 @@ Myero i <a href="http://get.adobe.com/flashplayer/"> Ngec pa Latuku me Adober</a
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.  Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.
+Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.
 
 
 ;Features
@@ -387,16 +387,16 @@ I tye katic ki cik me Firefox ma oti woko. Nong ngec megi wek obed maber!! <br/>
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-Rwom me yilo mite boti! Bed maber i kin kare mape oo acel. <br/> Cak tic ki Firefox megi manyen pi yenyo gin mamwonya ki megi ikom Web. <br/>   dwir ci tye me nono!
+Rwom me yilo mite boti! Bed maber i kin kare mape oo acel. <br/> Cak tic ki Firefox megi manyen pi yenyo gin mamwonya ki megi ikom Web. <br/> dwir ci tye me nono!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+I tye katic ki cik macon me Firefox. Nong <a href="%s">ngec megi</a> pi bedo maber! <br/> Nongo ngec me kit ma okati macokcoki, moko ber bedo ki Firefox ma dwir. Kwany yilo woko i dakika mape romo acel.
 
 
 ;Upgrade now
-Upgrade now
+Yil rwom ne kombedi
 
 
 ;Update now
-Update now
+Yil rwom ne kombedi
