--- a/ach/newsletter.lang
+++ b/ach/newsletter.lang
@@ -1,179 +1,174 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
-Get Monthly News
+Nong Lamut Dwe ki dwe
 
 
 ;Your Email Address
-Your Email Address
+Email Address Mamegi
 
 
 ;Text
-Text
+Nyig coc
 
 
 ;Available Languages
-Available Languages
+Leb Matye
 
 
 ;Select country
-Select country
+Yer Lobo
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Whoops! Mok ada wek i ket email address matiyo.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+Tim ber i kwan Cik pa dano me MOzilla ki iyee kun iroto canduk.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
+Ayee pi <a href="%s">Cik pa Dano</a>
 
 
 ;Sign me up!
-Sign me up!
+Yaba an bene!
 
 
 ;We will only send you Mozilla-related information.
-We will only send you Mozilla-related information.
+Wan wa bicwali ka ngec makwako lok kom Mozilla.
 
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
+Pwoc pi Cone!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
+Wan watye ki neno me anyim pi cako nywako kit ryeko &amp; diro me nongo en mape i Firefox, macalo lamut ma yomo ic ilok kom Mozilla ki yore ma watye katic matek pi yubo Web maber.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Cone pi ngec me Dwe ki dwe ci i gwok lamut kare lung kwede Mozilla, medo ki ryeko ki diro me nongo maloyo ki kom layeny me Firefox mamegi. Obedo yore mamwonya pir wa wek wakube!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Kombed wa cwali kwena me moko ada i email. Dii kakube me moko i mail ma eni ni pi miyo cone mamegi oti maber bot nying jo me mail ma eni ni.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Kwan lok kome weng <span> i waraga me lamut</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Dong kimoko woko cone me waraga me lamut mamegi.
 
 
 ;Format
-Format
+Yub
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Wun weng dong tye atera!<span>Ento Kur, Mukene tye Mapol ata</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+I mito nongo ngec ma pire tek? Waci wa lok ikomi keni. cite kun itye kany, yab akaunti pi llamut mukene ikom Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Yin
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Waraga pa Lamut Wa Mapat:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Nong ryeko ki diro me nongo en mamwonya ki i layeny mamegi ma imrao.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Ma kiwoto kwede awota
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Nong ngec lok kom med ikom manyen malyet ki kit me Firefox ma kiwoto kwede awota.
 
 
 ;Beta News
-Beta News
+Lamut me Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Kwan lok kom kit ma okati macokcoki pi wang Firefox ki gin ma kiwoto kwede awota mapwud pe gikelo me agiki woko.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Wek Obed Luwote!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox bene dang tye i dyer bar me wiyamo ma imaro pi boko lok. Kube kwed wa ci idony kaboko lok.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Loo cone me <span> Waraga pa Lamut mamegi</span>
 
 
 ;Subscribe
-Subscribe
+Cone
 
 
 ;Unsubscribe
-Unsubscribe
+Pe I cone
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Rot kan ka ce imito kwanyo woko ki email weng me Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Kwanya woko ki email me Mozilla weng
 
 
 ;Save Preferences
-Save Preferences
+Gwok en ma imaro
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Pwoc pi mino ngec i email mamegi ma imaro.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Dong kityeko kwanyi woko ki kany.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Wakwayo kica me neni wot. Onyo irom kobi wa pingo i aa woko?
 
 
 ;You send too many emails.
-You send too many emails.
+Cwal email mapol maloyo.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Jami megi ma onongo tye ie konye bene pe bota.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Email mamegi ma ilingo onongo kwano ne tek olu.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Pe aketo cinga pi man.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+An bene atye kakube kwede Mozilla i Facebook ki Twitter keken.
 
 
 ;Submit
-Submit
+Cwali
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
-
+Pwoc me kobi wa pingo itye ka aa woko.
