--- a/ach/snippets.lang
+++ b/ach/snippets.lang
@@ -1,127 +1,122 @@
-# these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now.</a>
+Ter Firefox kan mo keken ma in ibi ceto ie! Firefox ma okati macok coki manyen pi Anroid tye makome ci tye atera piri me nongo yom cwiny ie. <a href="%s">Nong ne kombedi</a>.
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
+Kombedi dong kit ma inongo kwede cik ma okati macok coki, <a href="%s">nong ngec ikom gin mamwonya</a> iromo timo ne kwede Firefox mamegi.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
+In pe itye ikom ngec me Firefox ma okati macokcoki. <a href="%s">Yil rwom ne tiny</a> pi nongo Web mamwonya atika!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Get the latest Firefox features first in <a href="%s">Aurora</a>.
+Nong kit ngec me Firefox ma okati macokcoki me acel ki i <a href="%s">Aurora</a>.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
+Nong neno odoco ma ilibe pi anyim pa Firefox. <a href="%s">Kwany Firefox Aurora</a> ci tem kit ma okati macok coki.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
+Mapwud Firefox Beta, ki mapwud Aurora Beta tye. <a href="%s">Tem Firefox Aurora</a> kombedi pi kit me ngolo twok en macok coki.
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
+<a href="%s">Note ki Firefox</a>ki nong jami weng ma imito nywako Firefox kwede wilobo alutu!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+Firefox tye ki yom ic pe obedo pi magoba ci tye me nono pi cako aka wangi labongo jalo kare.<a href="%s">Nong ngec mapol</a> makwako byeka wa.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+Me oyot, mamwonya ci ogwoke maber, Man en aye layeny me Firefox keken ma keti namba acel. <a href="%s">Nong ngec mapol</a>makwako ngo ma miyo wan wa linge mapat.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s">Kwany Firefox ki ikom Teblet pa Anroid mamegi</a> ki ket ojinga me Web i cingi. Nong kombedi.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+Gwok rwako mamegi iyie wek obed matiyo ci obed maber i wi intanet kwede <a href="%s">Roto Rwako iyie</a>.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+Gwok Firefox mamegi i kit. Ruk ne i en macok coki <a href="%s">Personas</a>.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+Dirica matidi mapol? Leg odoco layeny mamegi ki gin ma pe okete maber kwede <a href="%s">Panorama</a>.
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+Lutic kwede Firefox aryo pe rwate. <a href="%s">Med mapeca mo keken bot layeny mamegi</a> onyo kwany woko en ma pe itiyo kwede. Di ki cing tung cem kom acaki ne ci iyer keto megi.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+Ruk Firefox kwede Personas. Lor iwiye wek i tem, dii wek icwal. Onyo lim <a href="%s">ka gwoko cal</a> pi alifu mia mapol ata!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+Nong neno me acel i kit ma okati macokcoki, Mapwud guceto i Beta. <a href="%s">Kwany Firefox Aurora.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+<a href="%s">Kwany Firefox Aurora</a>wek tem kit ci kony wa pimo ngo ma miyo ne bot Beta.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+Nong i en ma onongo tye con ci kony kit anyim me Firefox.<a href="%s">Kwany Firefox Aurora</a>.
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+Kombedi kimino Firefox pa Anroid tye katic maber pi kit yor ma in iyenyo kwede ikom teblet.<a href="%s">Nong teko me web ki i capa cingi</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+Kwany Firefox ikom teblet me Anroid mamegi ci i ket teko me Web i cingi kikome.<a href="%s">Nong kombedi</a>.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Kwany Firefox Beta</a>, gab dwoko lok ci i kony me miyo yuba me Firefox ki cukuru cwiny pi lutic wa maromo milyon 450.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Kit temo, yub ne ci i jwa gi ki konyo wa miyo cik malubo kore bed maber maloyo kit ma onongo tye kwede. <a href="%">Kwany Firefox Beta tin!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Maro Firefox? Mito konyo mino cik malubo kore obed maber atika? <a href="%">Kwany Firefox Beta</a> ki dwoki wa lok tin!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+I tye ka tic ki Firefox Beta ma okati macokcoki?<a href="%">Nong ne kombedi</a> ci kony wa temo kit ma okati macokcoki.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Pe ikom Firefox Betta ma okati macokcoki? <a href="%">Nong ne tin</a> pi bedo ngat malanyo pi ngo ma wan watye ka tic ie ni pi cik malubo kore.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Mito nywako dwoko lok? <a href="%">Nong yore mene</a> ci kony imi cik malubo kore pi cukuru cwiny Firefox.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Lutic kwede Firefox Beta: Pe wiyi owil me <a href="%">gabo dwoko lokk</a> pi konyo wa keto gin me agiki ikom cik malubo kore.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Kony i wek omi cik malubo kore me Firefox cukuru cwinye maber. <a href="%">Kube kwede</a> ki nywak Firefox Beta kwede luwote ni.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Lwony luwoti me neno odoco kit Firefox matye kabino. <a href="%">Kube Kwede</a> ci inywak Firefox Aurora tin.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Tic ki Firefox   ikom komiuta mapol? Itwero Itwero keto gin marwata patpat kombedi imed ikom megi kun beo iwi gin weng.<a href="%">Nong yore me miyo tic Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-
-
