Convert to UTF8
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104675 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cy/snippets.lang
+++ b/cy/snippets.lang
@@ -58,7 +58,7 @@ Mae pob defnyddiwr Firefox yn wahannol. <a href="%s">Ychwanegwch unrhyw fotwm i'
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Gwisgo eich Firefox gyda Personas. Rholio drosto i'w brofi, clicio i'w osod. Neu ymweld â'r <a href="%s">oriel</a> am filoedd rhagor!
+Gwisgo eich Firefox gyda Personas. Rholio drosto i'w brofi, clicio i'w osod. Neu ymweld Ã¢'r <a href="%s">oriel</a> am filoedd rhagor!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
