--- a/en-ZA/upgradedialog.lang
+++ b/en-ZA/upgradedialog.lang
@@ -26,8 +26,8 @@ More awesomeness than ever
 There’s a new version of Firefox that can better protect you against online attacks.
 
 
-;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Get the upgrade</a> — it’s fast & free!
 
 
 ;get the latest in security
@@ -84,3 +84,7 @@ Downloading a compatible browser
 
 ;Installing a free upgrade to your <a %s>operating system</a>
 Installing a free upgrade to your <a %s>operating system</a>
+
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
